--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   webview_flutter: ^4.0.2
   intl: ^0.18.0
   pull_to_refresh: ^2.0.0
+  lazy_load_scrollview: ^1.3.0
 
 dev_dependencies:
   flutter_test:
