--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   intl: ^0.18.0
   pull_to_refresh: ^2.0.0
   lazy_load_scrollview: ^1.3.0
+  blurhash: ^1.0.0
+  flutter_blurhash: ^0.7.0
 
 dev_dependencies:
   flutter_test:
