--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   lazy_load_scrollview: ^1.3.0
   blurhash: ^1.0.0
   flutter_blurhash: ^0.7.0
+  splashscreen: ^1.3.5
 
 dev_dependencies:
   flutter_test:
