--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,27 @@ dependencies:
   intl: ^0.18.0
   pull_to_refresh: ^2.0.0
   lazy_load_scrollview: ^1.3.0
-  blurhash: ^1.0.0
-  flutter_blurhash: ^0.7.0
   splashscreen: ^1.3.5
+  flutter_launcher_icons: "^0.12.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/background.jpg"
+  min_sdk_android: 21
+  windows:
+    generate: true
+    image_path: "assets/images/background.jpg"
+    icon_size: 48
+
 
 flutter:
   uses-material-design: true
